Changed product name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NOSA | XML-tag finder</title>
+  <title>TAGIO | XML-tag finder</title>
   <link rel="shortcut icon" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- CSS -->
@@ -27,7 +27,7 @@
   <div class="container">
     <div class="row pt-5">
       <div class="col-md-auto"> 
-        <h2 class="mb-0">Nosa <small class="text-muted">Your tool to find XML-tag values and put them in a list.</small></h2>
+        <h2 class="mb-0">Tagio <small class="text-muted">Your tool to <em>input</em> a XML-tag and <em>output</em> it's value.</small></h2>
       </div>
       <div class="col pt-3 text-right">
         <small class="text-muted">Version 1.0</small>
@@ -48,8 +48,8 @@
         </form>
         <div class="btn-toolbar justify-content-between" role="toolbar">
           <div class="btn-group" role="group">
-            <button type="button" class="btn btn-success" onclick="nosa()">
-              <i class="fa fa-search" aria-hidden="true"></i> NOSA
+            <button type="button" class="btn btn-success" onclick="tagio()">
+              <i class="fa fa-search" aria-hidden="true"></i> USE THE FORCE
             </button>
             <button type="button" class="btn btn-secondary" onclick="copyOutputToClipboard()">
               <i class="fa fa-clipboard" aria-hidden="true"></i> COPY TO CLIPBOARD
