Added some link styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/font-awesome.min.css">
 
+  <style>
+    body {color:#fff;}
+    a {color:#fff; text-decoration: underline;}
+    a:hover {color: #dc3545;}
+  </style>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-83127106-3"></script>
   <script>
@@ -17,10 +23,6 @@
     gtag('js', new Date());
     gtag('config', 'UA-83127106-3');
   </script>
-
-  <style>
-    body {color:#fff;}
-  </style>
 </head>
 
 <body class="bg-dark">
