Added starwars reference

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <textarea class="form-control" id="input" rows="8" placeholder="Put your XML data here please."></textarea>
           </div>
           <div class="form-group">
-            <textarea class="form-control" id="tag" rows="1" placeholder="Enter your XML-tag here (ex: streetno)"></textarea>
+            <textarea class="form-control" id="tag" rows="1" placeholder="Enter your XML-tag here (ex: skywalker)"></textarea>
           </div>
           <div class="form-group">
             <textarea class="form-control" id="output" rows="5" readonly placeholder="Push the green button to make it rain!"></textarea>
