--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
         </div>
       </div>
   </div>
+  <footer class="mt-4 text-center">
+      <i class="fa fa-github" aria-hidden="true"></i> This code is available on <a href="https://github.com/PROOHF/tagio">GitHub</a> | Have this random dude made more useful stuff? <a href="http://www.proohf.com/">Let's see</a>
+  </footer>
 
   <!-- JavaScript -->
   <script src="js/scripts.js"></script>
 </body>
-
 </html>
